Fix alignment for eclipsecon banner Ad

--- a/stylesheets/eclipse_org/template.less
+++ b/stylesheets/eclipse_org/template.less
@@ -43,7 +43,7 @@ footer#solstice-footer{
   background-color:#fff;
   width:200px;
   height:200px;
-  float:right;
+  margin:0 auto;
   padding:5px;
   text-align:center;
   h3 {
